--- a/AppliCFABack/src/main/resources/application.properties
+++ b/AppliCFABack/src/main/resources/application.properties
@@ -20,7 +20,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL9Dialect
                                        #org.hibernate.dialect.MySQL8Dialect
 
 #Stratégie utilisée pour générer les tables en Bdd
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 
 
 #config des logs
