--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -36,7 +36,10 @@ archive:
     - echo "$ARCHIVE_PKEY" > archive_pkey
     - chmod 400 archive_pkey
     - chmod 700 .
-    - echo "put -rp $ARCHIVE_PATH/$ARCHIVE_NAME $ARCHIVE_NAME" > archive_batch
+    - >
+      echo 
+      "put -rp $ARCHIVE_PATH/$ARCHIVE_NAME $ARCHIVE_NAME" 
+      > archive_batch
     - >
       sftp
       -i archive_pkey
