--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,6 +10,7 @@ spring.datasource.driver-class-name=${SPRING.DATASOURCE.DRIVER-CLASS-NAME}
 #spring.datasource.url=jdbc:mariadb://localhost:3306/cfadb?useSSL=false&useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC 
 #si MySQL : jdbc:mysql://localhost:3306/myapi1bdd?useSSL=false&useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC 
 #si PostgreSQL : jdbc:postgresql://localhost/cfaback
+spring.datasource.url=${SPRING_DATASOURCE_URL}
    
 spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
 spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
@@ -50,8 +51,8 @@ logging.level.org.hibernate.cache=info
 management.server.port=8080
 management.endpoints.web.exposure.include=*
 
-#app.storagefolder=./src/main/resources/files/
-app.storagefolder=${APPLICATION_STORAGE_VOLUME}
+app.storagefolder=./src/main/resources/files/
+#app.storagefolder=${APPLICATION_STORAGE_VOLUME}
 
 jwt.secret=${JWT_SECRET_KEY}
 jwt.get.token.uri=/authenticate
