--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 .gitlab-ci.yml
 !**/src/main/resources/application.properties
 **/src/main/resources/application.properties
+!**/src/main/resources/application-dev.properties
 ### STS ###
 .apt_generated
 .classpath
