--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=${SERVER_PORT}
-
+backend.url=https://cfa-backend.dawan.fr
 #configuration de la datasource
 spring.datasource.initialization-mode=always
 
