--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -142,3 +142,8 @@ spring.servlet.multipart.max-file-size=10MB
 
 spring.servlet.multipart.max-request-size=10MB
 
+
+app.ldap.url=ldaps://ldap-replication.dawan.fr:636
+app.ldap.protocol=ssl
+app.ldap.technical.dn=cn=cfa,ou=cda,ou=ComptesTechniques,dc=dawan,dc=fr
+app.ldap.technical.pwd=password
