ajout timeout properties + token interceptor

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,9 @@
 server.port=${SERVER_PORT}
+
+spring.mvc.async.request-timeout=1800000
+
 backend.url=https://cfa-backend.dawan.fr
+
 #configuration de la datasource
 spring.datasource.initialization-mode=always
 
