--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -11,11 +11,11 @@ spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 
 #spring.datasource.driver-class-name=${SPRING.DATASOURCE.DRIVER-CLASS-NAME}
 
-                                    
+                            
+
+#spring.datasource.url=jdbc:mariadb://localhost:3307/cfadb?useSSL=false&useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC 
 
 spring.datasource.url=jdbc:mariadb://localhost:3307/cfadb?useSSL=false&useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC 
-
-#spring.datasource.url=jdbc:mariadb://localhost:3307/cfa?useSSL=false&useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC 
 
 
 #spring.datasource.url=${SPRING_DATASOURCE_URL}
