--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,12 @@
 			<artifactId>mapstruct</artifactId>
 			<version>${org.mapstruct.version}</version>
 		</dependency>
+		
+		<dependency>
+			<groupId>org.junit.vintage</groupId>
+			<artifactId>junit-vintage-engine</artifactId>
+			<version>5.7.0</version>
+			</dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -73,7 +79,6 @@
 			<version>1.5.2</version>
 		</dependency>
 
-
 		<!-- TOKEN -->
 		<dependency>
 			<groupId>io.jsonwebtoken</groupId>
@@ -119,7 +124,6 @@
 			<artifactId>freemarker-java8</artifactId>
 			<version>2.0.0</version>
 		</dependency>
-
 
 		<!-- iText pdfHTML add-on -->
 		<dependency>
