--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -102,7 +102,9 @@ logging.level.org.hibernate.transaction=info
 
 logging.level.org.hibernate.cache=info
 
+#logging.level.org.hibernate.type.descriptor.sql=trace
 
+#logging.level.org.hibernate.orm.jdbc.bind=trace
 
 #actuator
 
