--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -152,3 +152,7 @@ app.ldap.url=ldaps://ldap-replication.dawan.fr:636
 app.ldap.protocol=ssl
 app.ldap.technical.dn=cn=cfa,ou=cda,ou=ComptesTechniques,dc=dawan,dc=fr
 app.ldap.technical.pwd=password
+
+base_url_dg2=https://dawan.org/api2/cfa/
+domain.dawan=@dawan.fr
+domain.jehann=@jehann.fr
