--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -85,3 +85,7 @@ app.ldap.url=${LDAP_TECHNICAL_URL}
 app.ldap.protocol=${LDAP_PROTOCOL}
 app.ldap.technical.dn=${LDAP_TECHNICAL_ACCOUNT_DN}
 app.ldap.technical.pwd=${LDAP_TECHNICAL_ACCOUNT_PASSWORD}
+
+base_url_dg2=https://dawan.org/api2/cfa/
+domain.dawan=@dawan.fr
+domain.jehann=@jehann.fr
