--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -116,6 +116,8 @@ management.endpoints.web.exposure.include=*
 
 app.storagefolder=./src/main/resources/files/
 
+app.storagefolder2=./src/main/resources/files/
+
 #app.storagefolder=${APPLICATION_STORAGE_VOLUME}
 
 
