--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -56,16 +56,28 @@ jwt.secret=${JWT_SECRET_KEY}
 jwt.get.token.uri=/authenticate
 
 #JavaMail
-spring.mail.host=${SPRING_MAIL_HOST}
 
-spring.mail.port=${SPRING_MAIL_PROPERTIES_MAIL_SMTP_SOCKETFACTORY_PORT}
-spring.mail.properties.mail.smtp.socketFactory.port=${SPRING_MAIL_PROPERTIES_MAIL_SMTP_SOCKETFACTORY_PORT}
+#spring.mail.host=${SPRING_MAIL_HOST}
 
-spring.mail.username=${SPRING_MAIL_USERNAME}
-spring.mail.password=${SPRING_MAIL_PASSWORD}
+#spring.mail.port=${SPRING_MAIL_PROPERTIES_MAIL_SMTP_SOCKETFACTORY_PORT}
+#spring.mail.properties.mail.smtp.socketFactory.port=${SPRING_MAIL_PROPERTIES_MAIL_SMTP_SOCKETFACTORY_PORT}
 
-spring.mail.properties.mail.smtp.auth=${SPRING_MAIL_PROPERTIES_MAIL_SMTP_AUTH}
-spring.mail.properties.mail.smtp.starttls.enable=${SPRING_MAIL_PROPERTIES_MAIL_SMTP_STARTTLS_ENABLE}
+#spring.mail.username=${SPRING_MAIL_USERNAME}
+#spring.mail.password=${SPRING_MAIL_PASSWORD}
+
+#spring.mail.properties.mail.smtp.auth=${SPRING_MAIL_PROPERTIES_MAIL_SMTP_AUTH}
+#spring.mail.properties.mail.smtp.starttls.enable=${SPRING_MAIL_PROPERTIES_MAIL_SMTP_STARTTLS_ENABLE}
+
+#Test
+spring.mail.host=smtp.gmail.com
+
+spring.mail.port=587
+
+spring.mail.username=cfadawan@gmail.com
+spring.mail.password=cfaDawan21@
+
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
 
 spring.mail.properties.mail.smtp.socketFactory.class=javax.net.ssl.SSLSocketFactory
 spring.mail.properties.mail.smtp.connectiontimeout=5000
