--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -130,9 +130,9 @@ spring.mail.host=smtp.gmail.com
 
 spring.mail.port=587
 
-spring.mail.username=cfadawanmail@gmail.com
+spring.mail.username=cfadawan@gmail.com
 
-spring.mail.password=uwqe jcgh vikn klmo
+spring.mail.password=cfaDawan21@
 
 spring.mail.properties.mail.smtp.auth=true
 
