--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,9 @@
 		<profile>
 			<id>test</id>
 		</profile>
+		<profile>
+			<id>dev</id>
+		</profile>
 	</profiles>
 	<properties>
 		<java.version>1.8</java.version>
@@ -35,6 +38,13 @@
 			<groupId>org.junit.vintage</groupId>
 			<artifactId>junit-vintage-engine</artifactId>
 			<version>5.7.0</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-core</artifactId>
+			<version>3.5.15</version>
+			<scope>test</scope>
 		</dependency>
 
 		<dependency>
