add special management column

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -11,20 +11,20 @@ spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 
 #spring.datasource.driver-class-name=${SPRING.DATASOURCE.DRIVER-CLASS-NAME}
 
-                            
 
-#spring.datasource.url=jdbc:mariadb://localhost:3307/cfadb?useSSL=false&useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC 
+
+#spring.datasource.url=jdbc:mariadb://localhost:3307/cfadb?useSSL=false&useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 
 spring.datasource.url=jdbc:mariadb://localhost:3307/cfadb?useSSL=false&useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC 
 
 
 #spring.datasource.url=${SPRING_DATASOURCE_URL}
 
-#si MySQL : jdbc:mysql://localhost:3306/myapi1bdd?useSSL=false&useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC 
+#si MySQL : jdbc:mysql://localhost:3306/myapi1bdd?useSSL=false&useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 
 #si PostgreSQL : jdbc:postgresql://localhost/cfaback
 
-   
+
 
 spring.datasource.username=root
 
@@ -41,7 +41,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
 
                                        #org.hibernate.dialect.MySQL8Dialect
 
-#spring.jpa.properties.hibernate.dialect=${SPRING.JPA.PROPERTIES.HIBERNATE.DIALECT}                                       
+#spring.jpa.properties.hibernate.dialect=${SPRING.JPA.PROPERTIES.HIBERNATE.DIALECT}
 
 #spring.jpa.properties.hibernate.hbm2ddl.auto=true
 
@@ -130,17 +130,18 @@ backend.url=http://localhost:8085/
 
 #JavaMail
 
-spring.mail.host=smtp.gmail.com
-
-spring.mail.port=587
-
-spring.mail.username=cfadawan@gmail.com
-
-spring.mail.password=cfaDawan21@
-
+spring.mail.host=mail.dawan.fr
+spring.mail.port=465
+spring.mail.properties.mail.smtp.socketFactory.port=465
+spring.mail.username=jnzaza@dawan.fr
+spring.mail.password=69243Florence.
 spring.mail.properties.mail.smtp.auth=true
-
 spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.from=noreply@dawan.fr
+spring.mail.properties.mail.smtp.connectiontimeout=5000
+spring.mail.properties.mail.smtp.timeout=5000
+spring.mail.properties.mail.smtp.writetimeout=5000
+spring.mail.properties.mail.smtp.socketFactory.class=javax.net.ssl.SSLSocketFactory
 
 
 #File weight
