--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,7 @@ logs/*
 /nbdist/
 /.nb-gradle/
 /target/
+
+convocationExamen
+src/main/resources/application-dev.properties
+src/main/resources/application-test.properties
