--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
 	</profiles>
 	<properties>
 		<java.version>1.8</java.version>
+		<lombok.version>1.18.30</lombok.version>
 		<org.mapstruct.version>1.4.2.Final</org.mapstruct.version>
 		<sonar.coverage.jacoco.xmlReportPaths>target/site/jacoco-it/jacoco.xml,target/site/jacoco-ut/jacoco.xml</sonar.coverage.jacoco.xmlReportPaths>
 	</properties>
@@ -274,11 +275,21 @@
 					<target>1.8</target>
 					<annotationProcessorPaths>
 						<path>
+							<groupId>org.projectlombok</groupId>
+							<artifactId>lombok</artifactId>
+							<version>${lombok.version}</version>
+						</path>
+						<path>
 							<groupId>org.mapstruct</groupId>
 							<artifactId>mapstruct-processor</artifactId>
 							<version>${org.mapstruct.version}</version>
 						</path>
 					</annotationProcessorPaths>
+					<compilerArgs>
+						<compilerArg>
+							-Amapstruct.defaultComponentModel=spring
+						</compilerArg>
+					</compilerArgs>
 				</configuration>
 			</plugin>
 
